--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ a:active {
 
 <body>
 
-<p id="number" style="color: #333333; font-family: 'Avant Garde LT Book', 'Avant Garde LT', 'ITC Avant Garde', 'Avant Garde', AvantGarde, AvantGardeBook, 'Century Gothic', CenturyGothic, sans-serif; font-size: 300px; position: absolute; top:-300px; white-space: nowrap;"></p>
+<p style="color: #333333; font-family: 'Avant Garde LT Book', 'Avant Garde LT', 'ITC Avant Garde', 'Avant Garde', AvantGarde, AvantGardeBook, 'Century Gothic', CenturyGothic, sans-serif; font-size: 300px; position: absolute; top:-300px; white-space: nowrap;">#<span id="number"></span></p>
 
 <p id="ymi" style="color: white; font-family: 'Avant Garde LT Book', 'Avant Garde LT', 'ITC Avant Garde', 'Avant Garde', AvantGarde, AvantGardeBook, 'Century Gothic', CenturyGothic, sans-serif; font-size: 160px; font-weight: bold; position: absolute; top:-140px; left:30px; white-space: nowrap;"></p>
 
@@ -66,8 +66,8 @@ a:active {
   <br>
   <span id="syn"></span>
     <br><br>
-   <!--  <a href="/">Previous</a> | <a href="/">Next</a> | <a href="/">Latest</a> -->
-   <a href="javascript:rel()">Update</a>
+     <a href="javascript:prev()">Previous</a> | <a href="javascript:next()">Next</a> | <a href="javascript:rel()">Latest</a> | <a href="javascript:rand()">Random</a>
+   <!-- <a href="javascript:rel()">Update</a> -->
     <br>
     <small style="font-size: 30px;"><a href="https://twitter.com/yourmotherisbot" style="color:darkgray;" onMouseOver="this.style.text-decoration='underline">Twitter bot</a> | <a href="https://github.com/ajlee2006/yourmotheris-data" style="color:darkgray;" onMouseOver="this.style.text-decoration='underline">Get the data</a></small><br>
 
@@ -83,17 +83,43 @@ function Get(yourUrl){
     return Httpreq.responseText;          
 }
 
+function rand() {
+  var j = JSON.parse(Get("https://raw.githubusercontent.com/ajlee2006/yourmotheris-data/main/current.txt"));
+  relo(Math.floor(Math.random() * j.data[1]) + 1);
+}
+
+function prev() {
+  relo(parseInt(document.getElementById('number').innerHTML)-1);
+}
+
+function next() {
+  relo(parseInt(document.getElementById('number').innerHTML)+1);
+}
+
 function rel(){
   // console.log("Loading")
   var j = JSON.parse(Get("https://raw.githubusercontent.com/ajlee2006/yourmotheris-data/main/current.txt"));
   // console.log(j)
   document.getElementById("time").innerHTML = j.data[0];
-  document.getElementById("number").innerHTML = '#'+j.data[1];
+  document.getElementById("number").innerHTML = j.data[1];
   document.getElementById("ymi").innerHTML = j.data[2];
   document.getElementById("word").innerHTML = j.data[3];
   document.getElementById("pron").innerHTML = j.data[4];
   document.getElementById("def").innerHTML = j.data[5];
   document.getElementById("syn").innerHTML = j.data[6];
+}
+
+function relo(n) {
+  // console.log("Loading")
+  var j = JSON.parse(Get("https://raw.githubusercontent.com/ajlee2006/yourmotheris-data/main/past.txt"));
+  // console.log(j)
+  document.getElementById("time").innerHTML = j.data[n-1][0];
+  document.getElementById("number").innerHTML = j.data[n-1][1];
+  document.getElementById("ymi").innerHTML = j.data[n-1][2];
+  document.getElementById("word").innerHTML = j.data[n-1][3];
+  document.getElementById("pron").innerHTML = j.data[n-1][4];
+  document.getElementById("def").innerHTML = j.data[n-1][5];
+  document.getElementById("syn").innerHTML = j.data[n-1][6];
 }
 
 rel();
